--- a/Public/index.html
+++ b/Public/index.html
@@ -21,6 +21,8 @@
         placeat ex aliquam soluta quia, dicta temporibus iste quidem numquam
         totam!
       </div>
+
+      <img src="" alt="">
     </section>
   </body>
 </html>
